# svk-lib

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  camera.hpp  hlslinit.py  log.txt  log2.txt  main.cpp  setup.py  vcpkg.json
.cache/clangd/index/: BaseTypes.h.DB84AFC85BD5E1C6.idx  CodeGen.cpp.6A94ED77E3A63C0A.idx  Common.h.16E476D8E0052A34.idx  Constant.cpp.B2DCA516E4C753DD.idx  ConstantUnion.h.370BB952D02956F1.idx  DirStackFileIncluder.h.370E8321738EAC93.idx  GLSL.ext.AMD.h.20F94B8BC7104D24.idx  GLSL.ext.ARM.h.3B8A67EEA550C969.idx  GLSL.ext.EXT.h.62E735B1415EB8E3.idx  GLSL.ext.KHR.h.D3F5953EE0B23EAF.idx  GLSL.ext.NV.h.6E58780493A29311.idx  GLSL.std.450.h.52465C4A7C90BC1F.idx  GLSL.std.450.h.621745F6BDD47456.idx  GLSL.std.450.h.F451E362596FD50A.idx  GlslangToSpv.cpp.B39EE04BA3978BC4.idx  GlslangToSpv.h.08CF94E28F10671D.idx  InReadableOrder.cpp.907D9AA02576984F.idx  InfoSink.cpp.C5B6155A24F6F2C5.idx  InfoSink.h.5533E44533CA2FC8.idx  Initialize.cpp.B3AC8AEA00287A6D.idx  Initialize.h.AE09A2D7105D1329.idx  InitializeDll.cpp.64D1814C0D0E6DEB.idx  InitializeDll.h.A8523E9AC5E9BEF7.idx  InitializeGlobals.h.909948E7A519DF80.idx  IntermTraverse.cpp.3CDAFB7B9115A4F2.idx  Intermediate.cpp.843C28168E293660.idx  Link.cpp.D8A5E3139A1EE26D.idx  LiveTraverser.h.C756D7EA1614EEE3.idx  Logger.cpp.A909C8054EA9863A.idx  Logger.h.31C1B5722453958B.idx  NonSemanticClspvReflection.h.9496EC811D1A4D8F.idx  NonSemanticDebugPrintf.h.133EE38039379CDB.idx  NonSemanticDebugPrintf.h.424114416385B9A1.idx  NonSemanticShaderDebugInfo100.h.81A11CE5A7A1AD22.idx  OpenCL.std.h.85D5D758513E3FDF.idx  ParseContextBase.cpp.F4CC1E22B13ACD30.idx  ParseHelper.cpp.3AE5197AD9EF1FA1.idx  ParseHelper.h.F857BEEEA45DC9BD.idx  PoolAlloc.cpp.E6CADAA2E8427249.idx  PoolAlloc.h.4D0B20A839C92193.idx  (+777 more)
example/: main.cpp
res/shaders/: simple_shader.frag  simple_shader.frag.glsl  simple_shader.frag.glsl.spv  simple_shader.frag.spv  simple_shader.tesc  simple_shader.tesc.glsl  simple_shader.tesc.glsl.spv  simple_shader.tesc.spv  simple_shader.tese  simple_shader.tese.glsl  simple_shader.tese.spv  simple_shader.vert  simple_shader.vert.glsl.spv  simple_shader.vert.spv
src/: camera.cpp  main.cpp
svklib/: CMakeLists.txt  pch.hpp  svk_descriptor.cpp  svk_descriptor.hpp  svk_forward_declarations.hpp  svk_instance.cpp  svk_instance.hpp  svk_pipeline.cpp  svk_pipeline.hpp  svk_renderer.cpp  svk_renderer.hpp  svk_shader.cpp  svk_shader.hpp  svk_swapchain.cpp  svk_swapchain.hpp  svk_threadpool.cpp  svk_threadpool.hpp  svk_window.cpp  svk_window.hpp  svklib.cpp  svklib.hpp
